# VaultAI

./: .env  README.md  accent_color_picker.py  accent_config.json  chat_logs.json  metadata.pkl  requirements.txt  scaffold_vaultai.ps1  start.bat  uploaded_docs.json  vault_ai.py  vault_ai_console.py  vault_ai_gui.py  vault_ai_gui_GPT.py  vault_ai_gui_claude.py
VaultAI/: MANIFEST.in  README.md  pyproject.toml  requirements.txt
VaultAI/vaultai/: __init__.py  __main__.py  accent_color_picker.py  dep_check.py  gui.py
